include/GASPI.h

  typedef int gaspi_int;
  typedef unsigned long gaspi_timeout_t;
  typedef unsigned short gaspi_rank_t;
  typedef unsigned char gaspi_group_t;
  typedef unsigned int gaspi_number_t;
  typedef void *gaspi_pointer_t;
  typedef void *gaspi_state_t;
  typedef unsigned char gaspi_queue_id_t;
  typedef unsigned long gaspi_size_t;
  typedef unsigned char gaspi_segment_id_t;
  typedef unsigned long gaspi_offset_t;
  typedef unsigned long gaspi_atomic_value_t;
  typedef unsigned short gaspi_notification_id_t;
  typedef unsigned int gaspi_notification_t;
  typedef int gaspi_memory_description_t;
  typedef enum
    {
      GASPI_ERROR = -1,
      GASPI_SUCCESS = 0,
      GASPI_TIMEOUT = 1,
      GASPI_ERR_EMFILE = 2,
      GASPI_ERR_ENV = 3,
      GASPI_ERR_SN_PORT = 4,
      GASPI_ERR_CONFIG = 5,
      GASPI_ERR_NOINIT = 6,
      GASPI_ERR_INITED = 7,
      GASPI_ERR_NULLPTR = 8,
      GASPI_ERR_INV_SEGSIZE = 9,
      GASPI_ERR_INV_SEG = 10,
      GASPI_ERR_INV_GROUP = 11,
      GASPI_ERR_INV_RANK = 12,
      GASPI_ERR_INV_QUEUE = 13,
      GASPI_ERR_INV_LOC_OFF = 14,
      GASPI_ERR_INV_REM_OFF = 15,
      GASPI_ERR_INV_COMMSIZE = 16,
      GASPI_ERR_INV_NOTIF_VAL = 17,
      GASPI_ERR_INV_NOTIF_ID = 18,
      GASPI_ERR_INV_NUM = 19,
      GASPI_ERR_INV_SIZE = 20,
      GASPI_ERR_MANY_SEG = 21,
      GASPI_ERR_MANY_GRP = 22,
      GASPI_QUEUE_FULL = 23,
      GASPI_ERR_UNALIGN_OFF = 24,
      GASPI_ERR_ACTIVE_COLL = 25,
      GASPI_ERR_DEVICE = 26,
      GASPI_ERR_SN = 27,
      GASPI_ERR_MEMALLOC = 28
    } gaspi_return_t;
  typedef enum
    {
      GASPI_OP_MIN = 0, 
      GASPI_OP_MAX = 1, 
      GASPI_OP_SUM = 2  
    } gaspi_operation_t;
  typedef enum
    {
      GASPI_TYPE_INT = 0,
      GASPI_TYPE_UINT = 1,
      GASPI_TYPE_FLOAT = 2,
      GASPI_TYPE_DOUBLE = 3,
      GASPI_TYPE_LONG = 4,
      GASPI_TYPE_ULONG = 5
    } gaspi_datatype_t;
  typedef gaspi_return_t (*gaspi_reduce_operation_t) (gaspi_pointer_t const operand_one,
						      gaspi_pointer_t const operand_two,
						      gaspi_pointer_t const result,
						      gaspi_state_t const state,
						      const gaspi_number_t num,
						      const gaspi_size_t element_size,
						      const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_segment_bind ( gaspi_segment_id_t const segment_id,
				      gaspi_pointer_t const pointer,
				      gaspi_size_t const size,
				      gaspi_memory_description_t const memory_description);
  gaspi_return_t gaspi_segment_use ( gaspi_segment_id_t const segment_id,
				     gaspi_pointer_t const pointer,
				     gaspi_size_t const size,
				     gaspi_group_t const group,
				     gaspi_timeout_t const timeout,
				     gaspi_memory_description_t const memory_description);
  gaspi_return_t gaspi_segment_num (gaspi_number_t * const segment_num);
  gaspi_return_t gaspi_segment_list (const gaspi_number_t num,
				     gaspi_segment_id_t * const segment_id_list);
  gaspi_return_t gaspi_segment_ptr (const gaspi_segment_id_t segment_id,
				    gaspi_pointer_t * ptr);
  gaspi_return_t gaspi_segment_max (gaspi_number_t * const segment_max);
  gaspi_return_t gaspi_write (const gaspi_segment_id_t segment_id_local,
			      const gaspi_offset_t offset_local,
			      const gaspi_rank_t rank,
			      const gaspi_segment_id_t segment_id_remote,
			      const gaspi_offset_t offset_remote,
			      const gaspi_size_t size,
			      const gaspi_queue_id_t queue,
			      const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_read (const gaspi_segment_id_t segment_id_local,
			     const gaspi_offset_t offset_local,
			     const gaspi_rank_t rank,
			     const gaspi_segment_id_t segment_id_remote,
			     const gaspi_offset_t offset_remote,
			     const gaspi_size_t size,
			     const gaspi_queue_id_t queue,
			     const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_write_list (const gaspi_number_t num,
				   gaspi_segment_id_t * const segment_id_local,
				   gaspi_offset_t * const offset_local,
				   const gaspi_rank_t rank,
				   gaspi_segment_id_t * const segment_id_remote,
				   gaspi_offset_t * const offset_remote,
				   gaspi_size_t * const size,
				   const gaspi_queue_id_t queue,
				   const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_read_list (const gaspi_number_t num,
				  gaspi_segment_id_t * const segment_id_local,
				  gaspi_offset_t * const offset_local,
				  const gaspi_rank_t rank,
				  gaspi_segment_id_t * const segment_id_remote,
				  gaspi_offset_t * const offset_remote,
				  gaspi_size_t * const size,
				  const gaspi_queue_id_t queue,
				  const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_wait (const gaspi_queue_id_t queue,
			     const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_barrier (const gaspi_group_t group,
				const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_allreduce (const gaspi_pointer_t buffer_send,
				  gaspi_pointer_t const buffer_receive,
				  const gaspi_number_t num,
				  const gaspi_operation_t operation,
				  const gaspi_datatype_t datatype,
				  const gaspi_group_t group,
				  const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_allreduce_user (const gaspi_pointer_t buffer_send,
				       gaspi_pointer_t const buffer_receive,
				       const gaspi_number_t num,
				       const gaspi_size_t element_size,
				       gaspi_reduce_operation_t const reduce_operation,
				       gaspi_state_t const reduce_state,
				       const gaspi_group_t group,
				       const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_atomic_fetch_add (const gaspi_segment_id_t segment_id,
					 const gaspi_offset_t offset,
					 const gaspi_rank_t rank,
					 const gaspi_atomic_value_t val_add,
					 gaspi_atomic_value_t * const val_old,
					 const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_atomic_compare_swap (const gaspi_segment_id_t segment_id,
					    const gaspi_offset_t offset,
					    const gaspi_rank_t rank,
					    const gaspi_atomic_value_t comparator,
					    const gaspi_atomic_value_t val_new,
					    gaspi_atomic_value_t * const val_old,
					    const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_passive_send (const gaspi_segment_id_t segment_id_local,
				     const gaspi_offset_t offset_local,
				     const gaspi_rank_t rank,
				     const gaspi_size_t size,
				     const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_passive_receive (const gaspi_segment_id_t segment_id_local,
					const gaspi_offset_t offset_local,
					gaspi_rank_t * const rem_rank,
					const gaspi_size_t size,
					const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_notify (const gaspi_segment_id_t segment_id_remote,
			       const gaspi_rank_t rank,
			       const gaspi_notification_id_t notification_id,
			       const gaspi_notification_t notification_value,
			       const gaspi_queue_id_t queue,
			       const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_notify_waitsome (const gaspi_segment_id_t segment_id_local,
					const gaspi_notification_id_t notification_begin,
					const gaspi_number_t num,
					gaspi_notification_id_t * const first_id,
					const gaspi_timeout_t timeout_ms);
  gaspi_return_t gaspi_notify_reset (const gaspi_segment_id_t segment_id_local,
				     const gaspi_notification_id_t notification_id,
				     gaspi_notification_t * const old_notification_val);
  gaspi_return_t gaspi_write_notify (const gaspi_segment_id_t segment_id_local,
				     const gaspi_offset_t offset_local,
				     const gaspi_rank_t rank,
				     const gaspi_segment_id_t segment_id_remote,
				     const gaspi_offset_t offset_remote,
				     const gaspi_size_t size,
				     const gaspi_notification_id_t notification_id,
				     const gaspi_notification_t notification_value,
				     const gaspi_queue_id_t queue,
				     const gaspi_timeout_t timeout_ms);