src/GASPI.f90


    interface ! gaspi_segment_bind
       function gaspi_segment_bind(segment_id,ptr,size,desc) &
&         result( res ) bind(C, name="gaspi_segment_bind")
	import
	integer(gaspi_segment_id_t), value :: segment_id
	type(c_ptr), value :: ptr
	integer(gaspi_size_t), value :: size
	integer(gaspi_memory_description_t), value :: desc
	integer(gaspi_return_t) :: res
      end function gaspi_segment_bind
    end interface

    interface ! gaspi_segment_use
       function gaspi_segment_use(segment_id,ptr,size,group,timeout_ms,desc) &
&         result( res ) bind(C, name="gaspi_segment_use")
	import
	integer(gaspi_segment_id_t), value :: segment_id
	type(c_ptr), value :: ptr
	integer(gaspi_size_t), value :: size
	integer(gaspi_group_t), value :: group
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_memory_description_t), value :: desc
	integer(gaspi_return_t) :: res
      end function gaspi_segment_use
    end interface

    interface ! gaspi_segment_num
      function gaspi_segment_num(segment_num) &
&         result( res ) bind(C, name="gaspi_segment_num")
	import
	integer(gaspi_number_t) :: segment_num
	integer(gaspi_return_t) :: res
      end function gaspi_segment_num
    end interface

    interface ! gaspi_segment_list
      function gaspi_segment_list(num,segment_id_list) &
&         result( res ) bind(C, name="gaspi_segment_list")
	import
	integer(gaspi_number_t), value :: num
	type(c_ptr), value :: segment_id_list
	integer(gaspi_return_t) :: res
      end function gaspi_segment_list
    end interface

    interface ! gaspi_segment_ptr
      function gaspi_segment_ptr(segment_id,ptr) &
&         result( res ) bind(C, name="gaspi_segment_ptr")
	import
	integer(gaspi_segment_id_t), value :: segment_id
	type(c_ptr) :: ptr
	integer(gaspi_return_t) :: res
      end function gaspi_segment_ptr
    end interface

    interface ! gaspi_segment_max
      function gaspi_segment_max(segment_max) &
&         result( res ) bind(C, name="gaspi_segment_max")
	import
	integer(gaspi_number_t) :: segment_max
	integer(gaspi_return_t) :: res
      end function gaspi_segment_max
    end interface

    interface ! gaspi_write
      function gaspi_write(segment_id_local,offset_local,rank, &
&         segment_id_remote,offset_remote,size,queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_write")
	import
	integer(gaspi_segment_id_t), value :: segment_id_local
	integer(gaspi_offset_t), value :: offset_local
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_segment_id_t), value :: segment_id_remote
	integer(gaspi_offset_t), value :: offset_remote
	integer(gaspi_size_t), value :: size
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_write
    end interface

    interface ! gaspi_read
      function gaspi_read(segment_id_local,offset_local,rank, &
&         segment_id_remote,offset_remote,size,queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_read")
	import
	integer(gaspi_segment_id_t), value :: segment_id_local
	integer(gaspi_offset_t), value :: offset_local
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_segment_id_t), value :: segment_id_remote
	integer(gaspi_offset_t), value :: offset_remote
	integer(gaspi_size_t), value :: size
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_read
    end interface

    interface ! gaspi_write_list
      function gaspi_write_list(num,segment_id_local,offset_local,rank, &
&         segment_id_remote,offset_remote,size,queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_write_list")
	import
	integer(gaspi_number_t), value :: num
	type(c_ptr), value :: segment_id_local
	type(c_ptr), value  :: offset_local
	integer(gaspi_rank_t), value :: rank
	type(c_ptr), value :: segment_id_remote
	type(c_ptr), value :: offset_remote
	type(c_ptr), value :: size
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_write_list
    end interface

    interface ! gaspi_read_list
      function gaspi_read_list(num,segment_id_local,offset_local,rank, &
&         segment_id_remote,offset_remote,size,queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_read_list")
	import
	integer(gaspi_number_t), value :: num
	type(c_ptr), value :: segment_id_local
	type(c_ptr), value :: offset_local
	integer(gaspi_rank_t), value :: rank
	type(c_ptr), value :: segment_id_remote
	type(c_ptr), value :: offset_remote
	type(c_ptr), value :: size
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_read_list
    end interface

    interface ! gaspi_wait
      function gaspi_wait(queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_wait")
	import
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_wait
    end interface

    interface ! gaspi_barrier
      function gaspi_barrier(group,timeout_ms) &
&         result( res ) bind(C, name="gaspi_barrier")
	import
	integer(gaspi_group_t), value :: group
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_barrier
    end interface

    interface ! gaspi_allreduce
      function gaspi_allreduce(buffer_send,buffer_receive,num, &
&         operation,datatyp,group,timeout_ms) &
&         result( res ) bind(C, name="gaspi_allreduce")
	import
	type(c_ptr), value :: buffer_send
	type(c_ptr), value :: buffer_receive
	integer(gaspi_number_t), value :: num
	integer(gaspi_int), value :: operation
	integer(gaspi_int), value :: datatyp
	integer(gaspi_group_t), value :: group
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_allreduce
    end interface

    interface ! gaspi_allreduce_user
      function gaspi_allreduce_user(buffer_send,buffer_receive, &
&         num,element_size,reduce_operation,reduce_state,group,timeout_ms) &
&         result( res ) bind(C, name="gaspi_allreduce_user")
	import
	type(c_ptr), value :: buffer_send
	type(c_ptr), value :: buffer_receive
	integer(gaspi_number_t), value :: num
	integer(gaspi_size_t), value :: element_size
	type(c_funptr), value :: reduce_operation
	type(c_ptr), value :: reduce_state
	integer(gaspi_group_t), value :: group
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_allreduce_user
    end interface

    interface ! gaspi_atomic_fetch_add
      function gaspi_atomic_fetch_add(segment_id,offset,rank, &
&         val_add,val_old,timeout_ms) &
&         result( res ) bind(C, name="gaspi_atomic_fetch_add")
	import
	integer(gaspi_segment_id_t), value :: segment_id
	integer(gaspi_offset_t), value :: offset
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_atomic_value_t), value :: val_add
	integer(gaspi_atomic_value_t) :: val_old
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_atomic_fetch_add
    end interface

    interface ! gaspi_atomic_compare_swap
      function gaspi_atomic_compare_swap(segment_id,offset,rank,&
&         comparator,val_new,val_old,timeout_ms) &
&         result( res ) bind(C, name="gaspi_atomic_compare_swap")
	import
	integer(gaspi_segment_id_t), value :: segment_id
	integer(gaspi_offset_t), value :: offset
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_atomic_value_t), value :: comparator
	integer(gaspi_atomic_value_t), value :: val_new
	integer(gaspi_atomic_value_t) :: val_old
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_atomic_compare_swap
    end interface

    interface ! gaspi_passive_send
      function gaspi_passive_send(segment_id_local,offset_local, &
&         rank,size,timeout_ms) &
&         result( res ) bind(C, name="gaspi_passive_send")
	import
	integer(gaspi_segment_id_t), value :: segment_id_local
	integer(gaspi_offset_t), value :: offset_local
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_size_t), value :: size
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_passive_send
    end interface

    interface ! gaspi_passive_receive
      function gaspi_passive_receive(segment_id_local,offset_local, &
&         rem_rank,size,timeout_ms) &
&         result( res ) bind(C, name="gaspi_passive_receive")
	import
	integer(gaspi_segment_id_t), value :: segment_id_local
	integer(gaspi_offset_t), value :: offset_local
	integer(gaspi_rank_t) :: rem_rank
	integer(gaspi_size_t), value :: size
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_passive_receive
    end interface

    interface ! gaspi_notify
      function gaspi_notify(segment_id_remote,rank,notification_id, &
&         notification_value,queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_notify")
	import
	integer(gaspi_segment_id_t), value :: segment_id_remote
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_notification_id_t), value :: notification_id
	integer(gaspi_notification_t), value :: notification_value
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_notify
    end interface

    interface ! gaspi_notify_waitsome
      function gaspi_notify_waitsome(segment_id_local,notification_begin, &
&         num,first_id,timeout_ms) &
&         result( res ) bind(C, name="gaspi_notify_waitsome")
	import
	integer(gaspi_segment_id_t), value :: segment_id_local
	integer(gaspi_notification_id_t), value :: notification_begin
	integer(gaspi_number_t), value :: num
	integer(gaspi_notification_id_t) :: first_id
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_notify_waitsome
    end interface

    interface ! gaspi_notify_reset
      function gaspi_notify_reset(segment_id_local, &
&         notification_id,old_notification_val) &
&         result( res ) bind(C, name="gaspi_notify_reset")
	import
	integer(gaspi_segment_id_t), value :: segment_id_local
	integer(gaspi_notification_id_t), value :: notification_id
	integer(gaspi_notification_t) :: old_notification_val
	integer(gaspi_return_t) :: res
      end function gaspi_notify_reset
    end interface

    interface ! gaspi_write_notify
      function gaspi_write_notify(segment_id_local,offset_local,rank, &
&         segment_id_remote,offset_remote, &
&         size,notification_id,notification_value,queue,timeout_ms) &
&         result( res ) bind(C, name="gaspi_write_notify")
	import
	integer(gaspi_segment_id_t), value :: segment_id_local
	integer(gaspi_offset_t), value :: offset_local
	integer(gaspi_rank_t), value :: rank
	integer(gaspi_segment_id_t), value :: segment_id_remote
	integer(gaspi_offset_t), value :: offset_remote
	integer(gaspi_size_t), value :: size
	integer(gaspi_notification_id_t), value :: notification_id
	integer(gaspi_notification_t), value :: notification_value
	integer(gaspi_queue_id_t), value :: queue
	integer(gaspi_timeout_t), value :: timeout_ms
	integer(gaspi_return_t) :: res
      end function gaspi_write_notify
    end interface
